--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   nginx:
     image: nginx:1.25-alpine
     ports:
-      - "8088:80"
+      - "8099:88"
     volumes:
       - ./app/public:/var/www/public:ro
       - ./app/src:/var/www/src:ro
@@ -16,7 +16,7 @@ services:
     build: { context: ./app }
     environment:
       APP_ENV: prod
-      DB_HOST: 18.224.212.211
+      DB_HOST: db
       DB_NAME: brew_menu
       DB_USER: brew
       DB_PASS: brewpass
@@ -35,7 +35,7 @@ services:
     build: { context: ./app }
     command: ["php", "ws/server.php"]
     environment:
-      WS_PORT: 8088
+      WS_PORT: 8080
       WS_INTERNAL_PORT: 8090
       WS_INTERNAL_TOKEN: change-me
     volumes:
